after nuke: ansible host_vars

--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:h4+RO1N6,iv:L36iegMkc/2FT0cRBC6Mg9OnqE5DwjY/mMRpJPIiIaM=,tag:6tT7NyAdBqh9ZdoTmfDGKQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:csNkmkyo,iv:b07zGk/m0yxFrVUjw1H7QCf1b6dnE9l4G7nuWtqHWXI=,tag:5CltXyWTMA35v9KAHH/Irw==,type:str]
+kind: ENC[AES256_GCM,data:dD+Wpe6g,iv:4WmsfkRfxYjCwxHq+7y+AWi13ubm1v6KxvxARdz6n8Y=,tag:WPplYmhyztiZWAYho/qNSQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:C/27aa+T,iv:lib9yhjETdWOqEYv5h30tnPOvG99Fv6e9lpzWZNTgzA=,tag:Lj4UHTTwG6/HjZNHeTW8SA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrcFIwNUw3SmlvSlU0aUNG
-            b3ZYZUxONmJud1RtK1ovOElMdng3UXp6eHhRClFOUXpwV1VHRGpQRFJpQ29iZjNP
-            U3RQcHJscjRUVWhuR3VSaG0vMUY4dE0KLS0tIHMvZTFQb2oxT2NscW1zSkJMWXJY
-            OSt3eEFvK0p1S2RVS3VubzkybXBjdFEK29MQ6rDposznUvy1PYC9Ti9SJLsQKWTg
-            wLDgTn1aTDEnEUlutfJhfqBT3zLw95OOyELmHy6LbOPjxoMuN3sYTg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0R3JRTnRxM25PT1NEbVJN
+            KzREZG04S2pZWndERjExR2lCYTVaY2tXaG1jCmo0RTFRTnJtYXV1d29KdXJnaE5Z
+            TFVnclc5Z1RZNUlpYXRzNzdvS3l3aEEKLS0tIFdFWWZydm5UWWpRMFhGeGovODkw
+            Zzd1cElqRUF2WGw3d0RmMXlFck9QbncKtQAlLHd+nXUvVcXd4fDnjSED4gtTt7+X
+            e2dW6Y9eUoPXzq7IyINa/p7gYaSjNvs3SS0lfs5C4FdRmqkB1tXRPw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T03:15:27Z"
-    mac: ENC[AES256_GCM,data:71b2Y7poZeTN6PZiRQbhOsBleIWQ2Qn952ve4zL8+ZnFKqbKlTLRgLZFExbidsafOw/2dWjSj9YTMAZOfYVyda86FSxwLx8gXzfQYho/hQZ1EmXxH2GbS4TsjZyFx7KILqmM0GY6SbUXdDVlx/naAunGM2RrmT5IvjcyVmxFdyY=,iv:T/52BRnck/bTQCdHflt1uw5QMkxvAUgN+7fzPwsRTOs=,tag:9dWir4rIlkKKjjOwMn8XSQ==,type:str]
+    lastmodified: "2023-01-16T04:58:33Z"
+    mac: ENC[AES256_GCM,data:ojzxhKj/3f1a5zciYcxNqK22ju2E4D1BmrUrACrtdruJWsazV6L1gOaDbUZ4GHfvPrJTQf4JEPKq0c3/V5CzJ20NsMALty04kWFEQRaLHvxeGnxYAS3YYgiX0b+xId/eM9l39xqQMpQPScD5LG+a2VoFJAd8MbNK0IFkAbeEq1U=,iv:HEGdiEe22VxjjitwE4aF9gJLA0Vt1E3C/mF7iGL2mJ8=,tag:sJ8P2M1W2fKjnj+fEj+pPQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
