--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:5B97Mpj8,iv:o87sPxYYggJKdhW8dlg22t2P/Balneez4dXpQx8fM0w=,tag:G0WlE1cWFA6+/ccMkrJY5w==,type:str]
-ansible_user: ENC[AES256_GCM,data:A2ixJoSy,iv:rNfymh/Py05RNEro0tzySrw5Nc/NexjSfUjjHkbLncY=,tag:4z4hNUQSQlE41dT2VmEOOQ==,type:str]
+kind: ENC[AES256_GCM,data:x3CcmEdN,iv:GjRaYahXcaae82oIGTViVGjiMfQB4GLdz9L5RbfXncY=,tag:yoWQj7Va303dVAjPfscWBw==,type:str]
+ansible_user: ENC[AES256_GCM,data:2mLFQlvq,iv:7rnr77Qtuy9JaSUraqbi6Hz4F4uXI1iN6jw0s8y+chk=,tag:bTWcPomUYmtiHqhNjk+q1Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnUS9jOXJjRkdKOWFhcm1V
-            Njc0VnpTUzJoc2FNczB6RVc2bjhTUURrTEQ0CjJrRXBueGMwNmY5MjEwanl2TGtt
-            RytyekRKOWdzR0lKVmlBWGhVdEg3NHcKLS0tIEtRTDl1cER0c2NGckE5M3d5azM5
-            SHduVklzKzFUZWxFV2pLZFlzUDRtcXcKvedReTkOeq2cFJaljtw2k3J27hcUrwLK
-            3eOBZkmUyPeaHxhDcTaxUo0EGKYtNNPNOgYK8PrKM21vPWbGeWTgpQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpMzVzYkxOVXg3WkczTW90
+            dGhvaGQ4RjlLeEN0RlU2T1RCbjQrNVVvU0ZZCnBZbEF1UCtRVnhFQndud2VnZHR4
+            Zzh0cXVXamNtTkxFbWkzSUk0dGtNT0UKLS0tIFN3WFFpeEQybEpjd0hNN2JkVWMx
+            aE95UVc1M0ZCaTRlbDZ4a1F6Rmo5d1EKPpp3Qtm5/ld1Li5mgu7GfFt1DsANDWrV
+            xvnol2z4xDovWOJX30DJD/oBrF1vpJ5XxO0u7Zem8g5qUkHCkRqg4w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T03:15:27Z"
-    mac: ENC[AES256_GCM,data:SGRft/0gcv5OJ+QwdaI/AVBWXQPA/srMfFARRZ7bHyNZequzq/IK7eOqVWAqYnVKTLVz26ltmoYl0IM0CwRUk6T7qQNLH1M/PehnrnYs+aA4uR17WCqpk3ygGpCPs2Cr5EQVZiojgAzxliA33JYsu06Cs4fmd6rLNNUziqjkvv0=,iv:RxhguuZq+1DKrDMSHNJEdhbXb0RGCsswEep52jhNC5w=,tag:TXQ5S/X6ZgDqeZQ3YORVQA==,type:str]
+    lastmodified: "2023-01-16T04:58:33Z"
+    mac: ENC[AES256_GCM,data:A0kbdIkSRNabsDAQHYXqPf0EjSFb6NJ+5TGSK7RVuZ08fO26TTbBT2xF/jNiPWgU4ZumL3Gj/ISAFexeveARuv0iCf6w5puIh/1IuTU0LKdOAZQniWyx8X0XkPIQKR749ni3OAqLxKAK79qW/DAlKcVCDqANdfu4Mnqeva/40lE=,iv:quwX1+kWm19VAwuZ56jzNFOfRTq4Uyq8TzAN/30Kgwo=,tag:SBuQQ+mMfPBIgj7dc+Nvyg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
