--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:0+6vEER4,iv:52AYc150uA0F6Yw8P+v2D9Y9zQ8X6pibIt6jgatLFuE=,tag:NGUCLTfW0RPYS1uKJivcHw==,type:str]
-ansible_user: ENC[AES256_GCM,data:/XJajWYr,iv:doHEOf0/+pps+OljTzHKdCrfIIwlNqdMRMg6DO4lw30=,tag:VeX0VwJnNrPUoiKckiyh1Q==,type:str]
+kind: ENC[AES256_GCM,data:vbPd8zxC,iv:ehuMRaTxGIIE99NGQ20jpa/aiMQu6V9O00mrwKxTeoE=,tag:05KmGqBHtqYuONY69NjvJg==,type:str]
+ansible_user: ENC[AES256_GCM,data:5G0wcFTL,iv:TAsoTvIrSz1EOBrblzQhvlFKq3GmMnV79gVmccnat8w=,tag:4+AErUBa9tTSPatmbawvFQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5K2t6b25qZzZ2YS9Ha0cv
-            cDM5U3RuVGZydFgxMkh2N05TQ3RQT2h2VUZzCkxqUldVbGloTHVUTWRoRmdjSWxy
-            dnVuTmxHbFd0aFNKV1hQTmFhMUYrYzQKLS0tIFR5WUdjVHFnbm1PdU1OVUlVbGQ4
-            WHpPdjFJNEZhRjE4YVBPV2ZoVnMyek0KjhJ1uisWYOe8YqQPeimEDkLVCOO5tAil
-            I8/mATWOGYC9GP2FWtM/MTGB8G4yg5vr1KK4QyILSXNe8iHlK5wcNA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJRmRRenpTN0w1VEdDUzN0
+            OG5zRm9kbVI4US9hamZhNkRPYW4vSGJaQ3lzClNBNHFsN1ZTc0k4eWxKSEIvaHd6
+            SndYL3JBSUZMZjFLQnozSjB5NWpmbncKLS0tIEo5cXE4VzRCaFdob0ZFTExBaVFF
+            aDlIVVZLNitwY2JPc0FCY3k2ZW9wU0EKKnNSfk3TOUdGn5ehdH6dn9tJb/BG6p3V
+            sqnqKOgXRYB66Xjav+0Pk1qutnHA2vQDq/EEt9uPXtZQGQC9c/lIxQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T03:15:27Z"
-    mac: ENC[AES256_GCM,data:A9+5mQQI6lOmX2U4qYNDiGPPwhbLi7O4qZnP4533nwZhddfm2oH3tOSUmUdM6zFGK+/LbV2NC/PIisrWMfBb5Vc7livFL/mr1UnvX5M7lupRXKb0kRQlDyVuRT67HJqHkMbU2pElxTH5bhsjeXtNe9QTaUq9MiewaRISfxsthvE=,iv:uWF673XHOd8p7FB3YmqsM0l59vVhGkmJ6GIb+wI9g9o=,tag:JbnBFgWf7fGwl1/qM3udBQ==,type:str]
+    lastmodified: "2023-01-16T04:58:33Z"
+    mac: ENC[AES256_GCM,data:OdAf4xVtUww4+JFc9g4dURWdqSq0KWYr9lZmpbfnqzaH9Ky2OQ2iX9BGqae87pGRoZTzIxl5iLzAEF8XMdwMgJJVcbK0+8irUMHbk5ITXHLslHyAIZ9Wf1VuDvUXsw3ZedSH0x7+mn7qF+if5wiHuiIEQWLCftTMAVT8NYoSjjU=,iv:OCEd8aBNuH5cqbQMeW8QpVuuy8WcMj22cnOKXsLD4kg=,tag:Sob38xaSanENN2HOECjcHg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
