--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:2+ZAs2m8,iv:SRTFUOKl+jJcQ90ZVpQrlf9xXi25jwgZFFwSioXyW1E=,tag:v0YR9XjUZFQ9gFGMI0Pa1Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:KJ3Fjdmg,iv:MXl/pdLR+WoKUQA757LQ2I354KmCabk6GoKoesh220Y=,tag:ke0unVEeg0xxrNlLJGdG/g==,type:str]
+kind: ENC[AES256_GCM,data:Tp8ecgbo,iv:FA1zCdhRiyuMXqyk+tGuJs7LGYO7RyQnBewl6whJkwc=,tag:0sahTDPlcfAT9vhlC7KzMw==,type:str]
+ansible_user: ENC[AES256_GCM,data:lFhEcc2r,iv:amlbNlOxo6MuMQOzSDbujo1Rnbm3AMtQSJ/J8uYt1gw=,tag:a1yY2JQpM5Hk5gVD+EfRrg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBK2lxSHhEQ2l0ek0zZmY4
-            YWZZQSt2QlVBMDRzK3g0WjRiOFIzNzNxSmtZCkMzNWFtbm85Y1FVQSsreEM4N01Y
-            NFRrRnpUMlhEdVowVkptdndsYVpaNHMKLS0tIGl2YmhRcmI1QmFIOTVrWXliemlx
-            WGpEeTY0ZDJHeHpmaEFhc0JPUUFpemMKMpFYNPnF9ZUGt2KunDcQr+bWAfRQbpM0
-            NNjy5W5n/8hZpKLJu5a5IOK87OmiB4FscZH3m3O4/eIzRQ9LdC77NQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoem5ua051ajE5YzRlYXpx
+            VkpCMGlHb2MvT05QUXo2RTdwYTc0L3FuOVg4CjBBSHNYSXdIWnE2YW1lZ3V4MExJ
+            RVJscldzVG9tQnFNbURNSEJ1Q2VCdzAKLS0tIE9PcFdDTFJqem4yVmV6V2xPYWd0
+            YklscVZHTk9iRC9XVVh6K1B6eFZCUVUKsc1tSKc52/UC8vmYHVa/Rv3zrHuaLuOe
+            dD//D0x6LpLxZGaI3DNQVVqJzcfTaQkLZeS3QHB9g+IYIEzzEYY50g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T03:15:27Z"
-    mac: ENC[AES256_GCM,data:Cpykec+Gw26pAEQ7WPgQ961h5LKQCP8+iw7mC8cYu7oB6vT0TwDkGkVqBz/8AyPzbeAQ0EB9X2UT3I3x3EHtFk5St21BKlVkXDdTSRinqSsW6G88RYtIXxbjLkdRO9ChlmD2wdDDA0ww0BYJv07BDzAeortnfAtdm4GVKHKH1ck=,iv:moU4FwUDtJw6Z6cHQmVOlOT6Nue9hGJXiUUgM+UImBw=,tag:vcavCJXFgzF8LY0RVR1J2g==,type:str]
+    lastmodified: "2023-01-16T04:58:33Z"
+    mac: ENC[AES256_GCM,data:88CeEw4R3jDB68pc6ulB8UD3AqJyKOWliUTOY2S9gWH91rPYU4S6m8XNNxbevBj/VGh4ChoFx6NqgJHpHmlLcF92WZn6Bs0F9bl6Ekwtx6eG51Wf/8JfPBVYbAtNoVmm/eBg2JpT9SYA/vRIUCgx7KVDFXsNGfismmylERjmWZk=,iv:wYYW7OoWCt75yUUeIlaDumr02LUlWM/QqWF+wWZrwj0=,tag:8xXAs3z3MxIQT3REDhYAdA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
