--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:vkNT0lSM/TLzKrfTRjOxcTbCAo/D,iv:wEI/EnnJ8RHCbmpidxhyTb+4OgggS9PotfYlApRPVFg=,tag:f0CGdA039IAgkkdLesERPw==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:8AIMy1vSHgn1XIUlIM2mmkuHGWEclluZrXVmxzQQ/BXFzah+lw==,iv:gDVkE24hMQwM6+hw9DZhKieSEtW+N4W/j+dngUmZUY8=,tag:GtLZ1whrVZT6vGXO4+uNbw==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:fUL9b3mOq4Y6eok=,iv:gNKrJC6TQphdRfepSQR2em+8SGzlO8dTcC/EiJtgDSA=,tag:U2LeoACeeykbXiTPNgvv6w==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:np6xvIGXYonSrd1l2Iv8GAaQcoTW,iv:LveFiyjoOSmNc+0wem2Zf40tOIHXe2NqHPYtNOBCZes=,tag:57ZKUKYyH995aDM31GLo5w==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:1su6ynQ/V1wpQIiySjVqv0FonpxuNpZy9IBL8MU5GRoKsrO1QA==,iv:cgt9LCHW2LNXwZfkg3wb9XeD+aTdNZaXQZp+lPnIV7Y=,tag:i4ywVZBNwGxm04X/5aPS2w==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:Q+octD/fwEm+eBk=,iv:16VoD2d0dcD38b7iIwJwPkQh8jJohZb63rqg3m5uK4I=,tag:pOYTJ0ezzSv2hleVsFMioA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkVENiUGsxMERvMGNlTHRs
-            WGJ0Zzc5VEg5U21sb3RFOTlUN0o0OW96aUNRCkhiSWdnaDh6ZDJTcUtHZWJZQTlB
-            OUt2R0p6dkcwYkVQVTdNblFzaktyaGsKLS0tIGZvV1pGV1BvbEVHcVRoaUZYNUxx
-            U0dmdFBBVUxHNC90Z1JZaGgxM0ZQODgKPPhhf8DZk4MLNBYepLLq1bGfxAG3wwJv
-            g6vzoXTfispqPT8XRX1d6SKpxZDLYovAhkfaDJ0EFMdnAIRqD9aP/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLbDcxSTJYV1BYYVpNNVg1
+            Q1ZOOFVkRHRLQklwdlVLcVlhVlltS3RhejA4CnFrbCtzWUhwdlk5WWdVMlFHV0h1
+            K1hyUno4V0JaN3Znb2VoVVltOGM4WFEKLS0tIEtzQ1JmTXY0Tmd6dnBSekNLUDFY
+            KzUwZFgzdFlxVCtoMW1rYkNyUVpFWkkKKKKxVJWWQwoF/Y3kA2VOgAZu9SVS29Da
+            gbtZ//yiMMaxb1/KK5AG8on7oJr9rvcDl4BARWCjfPOir+TpMtrEJw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T03:15:27Z"
-    mac: ENC[AES256_GCM,data:pi4NApNAhk5reVukK1qpC2kulD4el/gAGdijjZhX8cl8o78addZShcXM7uo7rc4ToHvivxGuwWKxUNKeG3f+aX3P9x5PKu/Hsw86DVh5RAmMfF0wp4cB5bxSAq95Rr6Tzee/bIFB6QoqtZyGwpaBWBTU/ZF81bq39ceoVhCtAQw=,iv:5diWoSp3PO7dSMoz0PMObgyqYg77PjAeJmyMyHAJnts=,tag:1ojXqX/c9G9XNGc/KRhRig==,type:str]
+    lastmodified: "2023-01-16T04:58:33Z"
+    mac: ENC[AES256_GCM,data:nY8CPbj1gqVVpk3BD55IvCp9wS18G4Q9TzX9c17sFBBU0kS1b59ExMcfB5uiA1XjopTtP/dWGpm2TSH0Hk7f5usaPMJMjAKYA9N7zRzYkw0oJpqPeOpizcjRQAyaThBMjus2h0OzXXite9GQl5Pt7hTqIwCiEtaW0u7/1AMMysQ=,iv:ksyhtFnXUbUMNlNOf95nicD3+ms9xGBmnUJ/JL2sKYU=,tag:EcPsFacRnvztH19BGZPw0Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
