--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,25 +4,25 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:X6xvLQo4t6E1JiY=,iv:oklB/jrs8mKDsxKxTUiLJevQ4Lp4j7P1D5zOQhlTW78=,tag:hjlO9ysEIwPmZaNSbS1FcQ==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:DvluJfSazn4ur8zAVmwBv7zXmS3E,iv:2ee8S+BjJlGZD7L9zFLCpkas7b4z5VmR+0Mw2i6XkIA=,tag:OAnbfbsNPyH/HbvnzguCKA==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:V1N+8HpiKsW1EraFYPkgzJH0NVO2eZ1/cRiBUeo3aCdgPhdw8KFCTIK9hOoZT6QGIsq3I+Oo2yqP8Jo4eOxyQBT/pOEJBTA=,iv:f6TAKzruYvafwax4c8ZwfsVMIb9AeZUXQVoXiCkSDRg=,tag:ZrfFy67CpkiWHPMVbuCreQ==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:EXOp435of8RfULCgAGksb9kohNWfalJ/aN8agXLpPX8GMoY=,iv:hiwqWO+tySrqUSP2oBo6APVXQeh2nb6wr6GNSyVsSFQ=,tag:Y8lmkrYbDhsrFLF2/5tR1w==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:8eoyHYIG9LP4vv81sEkzSyVAqg==,iv:JMiipwmKZ++HHg1i3PXPIPT+SBzS4t1MMPcR/yhWMqI=,tag:t4oEHzQ/Ss2EI7VreMCcrw==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:NeE880BEkqW0BxGgNLtykH0tyVey,iv:80+3dFZD88zeW8vEzh36EfPshnfzsMaixoh3TtSBrzw=,tag:dU/1r/L3/B3VcDoSlv7njw==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:baBxXbZfjiU=,iv:WNvgaKA2tbpZVKZXEnTNfIaCQ9m2Fe4LA/LscZZ9wmw=,tag:BWYBTiP31JAFFaTqa2FeEQ==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:eaFrpABEsZE=,iv:h7SZbFHAKv1rV/s9w6nLcChUWvQlHn1/oX+qnw/ZQss=,tag:vei/sBs+J9WYX/KDkYCZ1Q==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:2xmuEuGrGVefnoz+hnv+v2J+xGj1hlK4FpMGfJ6iJrV5Rm7qZNO9FjFAeC/9oVh0Y09N5dkii5aEcbK7O3CUiw==,iv:uMJrpsoHTyhAHQHUS5wX221ACJMLTqyymsTTsMcYSPc=,tag:kMaT9H+nuC6y+f8p/X3Pbg==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:OhuCvI3U1Lybw4pcjhvZXhCMNupU6VSbU/jl6akKxjLgYTHY+EEjNCmKVr9RO3xOOlSpGPRr2PKBkgAhlCXQwQ==,iv:4aj/YiDpBWZ2sWVGS0L1WQ03+L7310gBig6S19u0z5Q=,tag:lqXxrVUvZF2of0XWMLSWug==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:f4RSH1dRWKF8,iv:U0LHL4ep9Zw8ydLvBDZWcZeBFFPPTQ/hFAEvZoipDcs=,tag:bhWDvgeTX8pZswUvHVJCIw==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:Hd6Vj2zwHltme6vN4rXl,iv:pyUDbdRHtVmMj4WJw4HHuK9wlvjYWxtbLU9hlEnx4Ns=,tag:a/6tjw2R4zE8KdJbI+098Q==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:njs2rX9nlCmdxjOn93piEikklkILvZaYITu9TTVhiWWOaZJ3BBzVMdDlsHTOyH2lEZo=,iv:sRb6bz0rvzLz1vqXIpegHo3F5I5gkvXV9bK1pELrSVI=,tag:sLQRPRnZALDv+FNfzP20tQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:2b9azqaHQ9s9ymy/e6U=,iv:9jNomqraBxe0i13snJ1Nk58CbIKbRzIPFzIr6m66ZSE=,tag:hgH3Hr0wY6m+Yo+cI1JcUQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:M/u4vRAYbeLgqj4hmD9bLtY5pcU=,iv:YJNVXMpVU0koNyeCRM9aLd7POY5GRY3Mn58ej1L0q9I=,tag:/UJa52o+H8AppSWlaf1EvQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:S9zCa+9M9hI=,iv:0JKjawMmYe1IzwVEZP3LJWUieA/5utUsrzbQfEqGR1c=,tag:WTOE1kae4oJ+ELr5RYf8nw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:VrdyazQHQ5/GFLxR,iv:vepeAjJ74Z9to61FUSXwImyh9j2eWzhJubCbyvFHYIo=,tag:ybspGDjKS2eQtuFSs02adg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:ojnxUnurxyE0,iv:TzKEqT7JcOopS8hHS5DleXJ78XjBr3TlRCHFjcwqVNg=,tag:irh/1xsKdBKR8FrlKtqmRw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:roZPqxav8jUx,iv:fHaZKkCRMCfIv4q5StiwYJw4Q99PC7O+kL114dwylY4=,tag:3w3vSag279gMVcjLF7tv/A==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:vV0v0gNl1NO+JAU=,iv:vVQ8+mwQKUTh8obEb3n6sGF90BJREdycDt65LraGqZI=,tag:GVVN/dw9OxAL0uLrPiaAUg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:MPWb4eG2mL181L4jEa1czPIGMdKN,iv:AVLcWIuH2JectgWYyFfPnDluJNKIfTUMoR0pIz9oedg=,tag:jJfNa1rHoqMK0MPYvjFtOQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:k03DuqSxS82Cjkkp18T3h3Tc/Glw2WaxzCx/BurdH+pGZgJBdRrA7cr9x4AjVrQdA/8aNKuCqHr7D+Gsyect3fijww8YikI=,iv:f4t61+dTqLNkoQsYeZ8x5iYGMwA9lWq/84TbizPTqAw=,tag:6U83FKTZvHToftOLcsm14g==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:EeYpYxkLZZ4dolSGtgFyGIHadHSQWtMmIpxLJ2TX91ONPqQ=,iv:R1ABo79i3CzjHv1NSdQIfC8rXOvnQBCWw9t6Uc5OXUk=,tag:NiADVeW3sWKxbgP9Ht2aYQ==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:HLHxEvxoT/9/79NuLOgRg+SbyQ==,iv:ziazPxtzGu8vhHnCgpa4NWkYfOofYlSqz2nUc/3xLFE=,tag:29KOBD23bNzZskrTh6Ue8A==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:lelPZdyRV36OSTeTPTPefFcZg0ie,iv:d3wzcvDXkAMUTmLHlFJmsfsmADwBddAiKNoJMSunPLI=,tag:aGRPWEw6ofXCcgV/i8KTZg==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:mgPpSqiSfNk=,iv:eCSwRX5EP8Sy8RON+Fj6g6sb6AEkSGEWI7LbZK9CWzA=,tag:EDsFfcV4eODPM57rh3Jypg==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:AQcqVCg87yQ=,iv:CQOG44WldRBtuEMpbIKhsxJMFE4+ZiNwraDa7bb0UFE=,tag:uqB+07UKGQwc1c95lhN4lA==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:IaUKs4Fli/tPqFINRdmTHAQrlT9CsXO03x6tL88qdA43qIYtVPztKO0AxWkUrgSADSU8YwBx5BhjyOqcxKrD2Q==,iv:qcVHGpiKacUtoNciVCcK5AEhrYcg038R1q/ZetcEKs4=,tag:BVTZUH2BEqwMaepO7a/4+Q==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:Lz3KVUJAb46LNdpt5FnhvYa0H33NNsCAOUBqdQWaOgdRdPu6q6TIbCtUaHT0Gg3l7GjHrSADvow4umtUGTyEmg==,iv:nwFbm3bDO7K+nrDV51TOc6iUE02P5h6s33wOlLHMEqQ=,tag:iPpygjEV2xdxh6f3HGx0HQ==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:9P4i3ZDnzEvw,iv:Uir4eWlRNKtputdp097UGwSDMbK4qRhR+2nKO8GjqKk=,tag:6wv0pnxfP263rPbBhMGkFg==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:n3cbjBzxiFP2P7WN14ep,iv:0DsQaotdP7m4dF7eX5w51SicrqJZeAHV5ex6uAXIRa4=,tag:DIr4K3KwgHxydtyCp+M24Q==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:ys/0h07kD92uHxDs6IlwOP4+bmBd1iAvG74NvQvtMzVWkKuznTKjzMaXhz61yCZX8KE=,iv:+fIpbsFJESVz0igehKND4UxlfCJZBDifhH+80Q99P+Y=,tag:gqETmzFlV/oHCklxwwkSVQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:sWvLfx12z5nGN/Ogfvg=,iv:+mMSrfEgC/vNesa88im7gde51RxrWRoCe5jbF2Sopc4=,tag:yHtrwglSVswAVlGamPL9pg==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:rYyG/UkIigZkeghlbSMSfY82rLM=,iv:4XWENWvpdj5ppNdlYSsinIrRSsQOpOx2Pu+Hw8kxVP0=,tag:zRUSRjT5FD7iKUBn2AA7Rg==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:OU+25+7wy8c=,iv:0NEvTLxWCSP9vCrmAYHIMpYlGP/ucL8McPQoCy4i0wE=,tag:dnIXp0kXYWD2cyWIKNWEmA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:6tVhqlqhVlU4wFeZ,iv:kQ1ZdeIi+FHPR2teS/LQpC1aa1zBm3Jz1LxLFBwX1p0=,tag:9M/T9wSYqTTYBzuVPVlXtQ==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:bnGwJUC7KARh,iv:0nv/2y9CzHkqaJQlCqqUij7EszOFtab3sMALm4z3EtQ=,tag:NmV6iolzE6mV+kvNFbLdmg==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:NL/k8dR+7LAY,iv:jFQH5lB9NDIcOTcwyIfRAgjEW7ICt696eGZaBibsDqE=,tag:HqczcjQkXK8rM4MknADzOA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -32,14 +32,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGV2FyczZFTXc1MmozcU5Q
-            QllpMWFQb0RwekFHZU9VVVJNUHpPSnlnSW5FClNYYnNEUVZjcUJHSEo3a1VPeXFQ
-            RGk2OW9CYk1TZ1lJTjNIcVg4eVJQL2cKLS0tIFNRV3ZwL2NEY3NaNk14R1RXRmtO
-            QWFRdG9iVWNxNVdyL2ZFL3pKNHp1eFkKNh+hpDxhe1vJSpwV4Jd075xe7I0iKeQC
-            My3Z4+OVYNgn049E56PiAgWcYbzJGqf5ZloJWUIl4QxX7x8+yhIZFA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTUXZuTFhySlpNTzMzeGwv
+            blc1OHgva0w1WmRjRGNSZ1B4K0JMc2pDNkRnCnErRk9qM250eGoyR1M3T1RKV2F4
+            TUJrSE8vUC9XdEMyS3g5eXlYRzlGcjAKLS0tIGQxZXo4Z21wMnJvem5IamR5dHRr
+            azM5dVl5aDVuc2RiYkV4V0dDODRLdTAKZHub+5LaLzCQm7MTXj0ipZe9RU1do/8L
+            nzoNljbyhF54fXtSJHNuM4yCImgXDG/c9tOw67WevaJpwuveuPlHXw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T03:15:27Z"
-    mac: ENC[AES256_GCM,data:fs3BTo+oC+m5pjaptj+TGzTYV182iHT48HiP5zz6I/vx8DXyb0jCCWL38LdtyaBCg0x0JZULCK1aouY6cT+O2jFofC9kdhqZ9dFsqk0ICHPnlyBlaxq8Ig9dFy3Rqxw/VsCVSHsAaTgqNbft0q0c/ZysLN5duQG77X4mglhKFBQ=,iv:loos+GboYnDnF2olA5yNTk8XsQ2wjhWi6dhkn9Q3tF8=,tag:z0nev+yQldaS/ogvOwrEOA==,type:str]
+    lastmodified: "2023-01-16T04:58:33Z"
+    mac: ENC[AES256_GCM,data:lX4rhbh17dWdYea2Yk3q6CTDYnYv6RgLnruOC3v0JhMHG2EHENemfJ54tvguIz4svN1pyQPi0oZbVuZKxJZhtGJKrkZzodRRYSBulM2PAdQ91bUmri7P7Fev/GJTVj9PT0liBk1A5RaoyMiQpQZCWpNT38Q9e0tdfyidrgKvkwU=,iv:R+f7bZhuVxLTOe5kvQPDic5FElyJGt2QHbve2JEGSFk=,tag:ZixzBBu3O9ewrIBT0NFeOQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
