--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:NImHOfOq,iv:MR5S5+vePUBPrFnc6hGkz7doaAaN4X5psXH/Cn7cfec=,tag:DntOz+J6Oc8WSD4VIDJYVg==,type:str]
-ansible_user: ENC[AES256_GCM,data:rxKyTVDU,iv:uB3s35lBruGl6J4LUy5RtkyZLFQ9JepP7dQBr0A/avM=,tag:QQuFtCcW7UIdRrhLsXW7Lw==,type:str]
+kind: ENC[AES256_GCM,data:J5FHe+lv,iv:kSuyj1kdh4lkSv+yQIH3YLcNgQnVopRfm9/gyxWHdNM=,tag:gfmo7fr5TqbLphtmlFUJbQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:gY9I90Vc,iv:63fW8Q3ui7Pg5oYa4wC1V3tTSwVQNavshJ/am57zlBs=,tag:lKa+0+pUguJpYiiDn4GUnA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZK3lBcFcwMnY4eDFNREVF
-            SWFQV0pTUC96MjdWNzFqVDl2L1Q5VEE1aTBBCitxV0hLREhJb0M2MU1la08rVUIr
-            TlUrWDExazdlblVqVTh5VUhOVVVLL0UKLS0tIFJqWHQrRnFnL1JvYnZrdlFkWlU5
-            WkpHQm00bm1HU1VwV3ZjbHZYSGo5cHMKwQdYWoROjsp9nFe76isB3lKjKq6w+KvM
-            xtOGKugCUCs+mMsVEtR3DOZRP1Ztiy3KSgoAT38SJwKtQc2+FrskNg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyVWFXU0ZRV1huR3J3NzJy
+            UjV2cEg3WnN6YjBkb25taFVVSVdnOEJyR0dVClgwelRmdS9mTjE2Zzd0c3RSTUk0
+            V2JvSlJqaFNhSDlVSm9qWGdNWjJoamMKLS0tIHkxbEF6R0tOV1BwcWdKT2RMY0RN
+            dHA2WHB3S09PZGNmYWtJeFgrT0MvOWsK6C1t4DbXE0OXZjlvRKIGkd/x+Dzgin9C
+            9RrIkZgVfepDXsFKhPBuhY+F8qrFMA8NQ/+8V2kKWN0jHCLyKgCxVg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T03:15:27Z"
-    mac: ENC[AES256_GCM,data:5/Srxxu/2TzkjBWJAeyypukb/TAzs84GcNQpYWBUIFm5DWiO9MeaXz1AUNlxHE0mGZ97MKZDap2jqgDv7Gh2MI+yQOW3PULtc0U9x/vt+ZjJcTvOajsbiBaWMBjl5eXBh0jeO4++KD17/0lQh4UoyFT4KHw3hkRAZYUFJNCFv7k=,iv:xHmNcNvXwjh8vdfBDzk3v2z0wDbSKEFzkAzcAlww60U=,tag:L40o3ioJLj4o3tN3RKKPzQ==,type:str]
+    lastmodified: "2023-01-16T04:58:33Z"
+    mac: ENC[AES256_GCM,data:KtWkk8neIPEOaf846SuiODDQnIk+DNMzUdlezOSKJ8xgDhXEt/vVpLSQKrHshpPdTLXtFS9bBRNI25MuRDPMIT1XGk2L+7+qFPjEGFsqxYIz0q79QcugDgm0u60Zq1wapR8LqJmia3NEVfrvIt3msbc7sAAzaERhRBFK61DsUkQ=,iv:rNxa8SkJIbb3/kOH20TKMY3b49v/acO1KeI0V1K13LQ=,tag:dP/OI5RqpNYuhAatd1O6LQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
