--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:qjuQo+lA,iv:E/L4N6kbCYidAKgrJloJcw1DN/vhc8U33jVnsmI+ZdE=,tag:cRlkHebgE1w29PE5Y43w6A==,type:str]
-ansible_user: ENC[AES256_GCM,data:m1ehV0pJ,iv:PJjGKuvTR/VagiH2lJ9e7SBlzwgoQzhDOfeei+EtF9I=,tag:Ekhkaep5sFgyvov6rOzwuQ==,type:str]
+kind: ENC[AES256_GCM,data:/ip9lstk,iv:ctL+Ki2xuvNPsZuuTbkBd4p0DiKBtsey7OTXQQuTLUE=,tag:BuSbLKs6lqAOks8PDkov4g==,type:str]
+ansible_user: ENC[AES256_GCM,data:x0dRVzGt,iv:OM1p+pLxD41M/Vso58vl4EpWjznWFXIRd3/HW4ug7gM=,tag:McoVV93ZRmArSrmQhGUX5g==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYMFo3amNHYjlONWdsaG8r
-            T3JsV3ljYnIyK3VvSm1udW5EYm5kbzFQeEV3ClVLLzRqMDdZT2ZVSDhCdHhEemZi
-            WlVFZ0o5TW51Zm9EZFRvRldkOVUrbmcKLS0tIHZTQjB5SkdZRUxKYXlFVGxaM25Y
-            OWtvQXNHNFJ2MVdWUElzbm1seDVtVEUKoby3SzuUO7xCkbd3nR1BOZPjeHbSksg0
-            mWzf/u+hDhzzG2bcMrStgGEfqFaDC35xiVwGR3Aqn6uUtRXGdnRcXA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwNHY3RkRqYVRIY0VoTXpz
+            Sm9IZW03SlNCK05BeCtuWkFHdzkvQ2VjR1ZVCnpsbldVWDJtMm1ycGtmS0xyYnpR
+            b0thTm1jNmpCOUpZZzhCOVZFMHhXdTgKLS0tIHJRZjk5Tmdob205Z1RZeEVWN3kv
+            ZWUxZFRiMXVJcVJxaXl4aGUzT3R5UXMK5Yw6X/c9P5XiFM67gRX3lMLfCcpYi7V+
+            OUpESL4u3tMkZjDA24/ipt18g3rgxjKNU1wam5HYNvoMC/Vn8L1i/Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-16T03:15:27Z"
-    mac: ENC[AES256_GCM,data:YsTNO60/8Zv65JX/uyQcbOQbxfUojipLsn2G8SFae9STOghD49GQTLPN/wDNatRKkRxPBNtUvKjICmG/M5/jrnr2U8RKRvk3uAiStPbialsj1BlAfYs5vozH/QHPnlGUxQb21NOFhzPYxoSC0oIlb54dRSufCxSPYiE+RgPHbpQ=,iv:3aac9GiY+lunwPNg7ijzbpJMkIrPgZwCYWbIcoeTKfo=,tag:su9etKkIxJ1kGNcX/9pUpA==,type:str]
+    lastmodified: "2023-01-16T04:58:33Z"
+    mac: ENC[AES256_GCM,data:b5qd9YH1nWgcjFsqhecp/3wz7+8pJZjchCNbnQB0aj+9U1N1CkA+aji7AXQB6Ib0AezApCctM7hyXYsj+YKVdXcF5KteDr22LSuPN9GnzbyvA7fUsgEhM0r9dIIM7S+S3VVHIViRoBTIoQmZGp6RCV/h0K7N8f0MkWi7mE4KhMU=,iv:Cpn4q4v2di5GwN/Af1yNq8tda7eWeW9Ow00Hhx0euq4=,tag:XQaxSxlb8pT9O2HSvJengw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
