after nuke: traefik-dashboard-ingress

--- a/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
+++ b/kubernetes/apps/networking/traefik/app/dashboard/ingress-route.yaml
@@ -22,7 +22,7 @@ spec:
         - name: networking-traefik-middleware-chains-authentik@kubernetescrd
           namespace: networking
   tls:
-    secretName: "traefik-${SECRET_DOMAIN/./-}-tls"
+    secretName: "traefik-${SECRET_DOMAIN/./-}"
 # ---
 # apiVersion: traefik.containo.us/v1alpha1
 # kind: IngressRoute
