--- a/kubernetes/apps/monitoring/kubernetes-dashboard/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/kubernetes-dashboard/app/ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   name: kubernetes-dashboard
   namespace: monitoring
   annotations:
+    hajimari.io/icon: mdi:kubernetes
     cert-manager.io/cluster-issuer: "letsencrypt-production"
     traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
     traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
@@ -23,5 +24,5 @@ spec:
             backend:
               service:
                 name: kubernetes-dashboard
-                port:
-                  number: 9090
+                # port:
+                #   number: 9090
