--- a/kubernetes/apps/monitoring/kubernetes-dashboard/app/ingress.yaml
+++ b/kubernetes/apps/monitoring/kubernetes-dashboard/app/ingress.yaml
@@ -24,5 +24,5 @@ spec:
             backend:
               service:
                 name: kubernetes-dashboard
-                # port:
-                #   number: 9090
+                port:
+                  number: 443
