--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./kubernetes-dashboard/ks.yaml
-  - ./kube-prometheus-stack/ks.yaml
-  - ./grafana/ks.yaml
+  #- ./kube-prometheus-stack/ks.yaml
+  #- ./grafana/ks.yaml
