--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -96,6 +96,11 @@ spec:
           - hosts:
               - "prom.${SECRET_DOMAIN}"
             secretName: "prom.${SECRET_DOMAIN}"
+      securityContext:
+        fsGroup: 65534
+        runAsGroup: 0
+        runAsNonRoot: false
+        runAsUser: 0
 
       thanosService:
         enabled: true
