restoring prom/grafana

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -132,7 +132,7 @@ spec:
         storageSpec:
           volumeClaimTemplate:
             spec:
-              storageClassName: home-kubernetes
+              storageClassName: nfs-client
               resources:
                 requests:
                   storage: 5Gi
