rook/ceph attempt #2

--- a/kubernetes/apps/kube-system/rook-ceph/app/cluster/helm-release.yaml
+++ b/kubernetes/apps/kube-system/rook-ceph/app/cluster/helm-release.yaml
@@ -123,12 +123,18 @@ spec:
       dashboard:
         ingressClassName: "traefik"
         annotations:
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          external-dns.home.arpa/enabled: "true"
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
         host:
           name: "rook.${SECRET_DOMAIN_NAME}"
           path: "/"
-
+        pathType: Prefix
+        tls:
+          - hosts:
+              - "rook.${SECRET_DOMAIN}"
+            secretName: "rook.${SECRET_DOMAIN}"
     cephBlockPools:
       - name: ceph-blockpool
         spec:
