--- a/kubernetes/apps/kube-system/rook-ceph/app/helm-release.yaml
+++ b/kubernetes/apps/kube-system/rook-ceph/app/helm-release.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: kube-system
 spec:
   interval: 15m
-  releaseName: rook-ceph
+  releaseName: rook-ceph-operator
   chart:
     spec:
       chart: rook-ceph
