--- a/kubernetes/apps/kube-system/rook-ceph/app/helm-release.yaml
+++ b/kubernetes/apps/kube-system/rook-ceph/app/helm-release.yaml
@@ -2,11 +2,11 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: rook-ceph-operator
+  name: rook-ceph
   namespace: kube-system
 spec:
   interval: 15m
-  releaseName: rook-ceph-operator
+  releaseName: rook-ceph
   chart:
     spec:
       chart: rook-ceph
