--- a/kubernetes/apps/kube-system/rook-ceph/app/cluster/helm-release.yaml
+++ b/kubernetes/apps/kube-system/rook-ceph/app/cluster/helm-release.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: kube-system
 spec:
   interval: 15m
+  releaseName: rook-ceph-cluster
   chart:
     spec:
       chart: rook-ceph-cluster
