rook/ceph attempt #2

--- a/kubernetes/apps/kube-system/rook-ceph/app/cluster/helm-release.yaml
+++ b/kubernetes/apps/kube-system/rook-ceph/app/cluster/helm-release.yaml
@@ -4,6 +4,8 @@ kind: HelmRelease
 metadata:
   name: rook-ceph-cluster
   namespace: kube-system
+  meta.helm.sh/release-name: rook-ceph-cluster
+  meta.helm.sh/release-namespace: kube-system
 spec:
   interval: 15m
   releaseName: rook-ceph-cluster
