rook/ceph attempt #2

--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -11,4 +11,4 @@ resources:
   - ./nfs-subdir-external-provisioner/ks.yaml
   - ./local-path-provisioner/ks.yaml
   - ./storage/ks.yaml
-  - ./rook-ceph/ks.yaml
+ # - ./rook-ceph/ks.yaml
