rook/ceph attempt #3

--- a/kubernetes/apps/monitoring/goldilocks/app/helm-release.yaml
+++ b/kubernetes/apps/monitoring/goldilocks/app/helm-release.yaml
@@ -48,6 +48,7 @@ spec:
         ingressClassName: "traefik"
         annotations:
           cert-manager.io/cluster-issuer: "letsencrypt-production"
+          external-dns.home.arpa/enabled: "true"
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
         hosts:
