--- a/kubernetes/apps/rook-ceph/rook-ceph/app/cluster/helm-release.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/app/cluster/helm-release.yaml
@@ -129,7 +129,7 @@ spec:
           traefik.ingress.kubernetes.io/router.entrypoints: websecure
           traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
         host:
-          name: "rook.${SECRET_DOMAIN_NAME}"
+          name: "rook.${SECRET_DOMAIN}"
           path: "/"
         pathType: Prefix
         tls:
