--- a/kubernetes/apps/rook-ceph/namespace.yaml
+++ b/kubernetes/apps/rook-ceph/namespace.yaml
@@ -4,6 +4,4 @@ kind: Namespace
 metadata:
   name: rook-ceph
   labels:
-    goldilocks.fairwinds.com/enabled: "true"
-    # pod-security.kubernetes.io/enforce: privileged
-    # pod-security.kubernetes.io/enforce-version: latest
+    kustomize.toolkit.fluxcd.io/prune: disabled
