--- a/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -2,29 +2,25 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: rook-ceph
+  name: rook-ceph-operator
   namespace: rook-ceph
 spec:
   interval: 15m
-  releaseName: rook-ceph
   chart:
     spec:
       chart: rook-ceph
-      version: v1.10.9
+      version: v1.10.8
       sourceRef:
         kind: HelmRepository
         name: rook-ceph
         namespace: flux-system
-      interval: 15m
   maxHistory: 3
   install:
     createNamespace: true
-    crds: CreateReplace
     remediation:
       retries: 3
   upgrade:
     cleanupOnFail: true
-    crds: CreateReplace
     remediation:
       retries: 3
   uninstall:
@@ -33,19 +29,11 @@ spec:
     crds:
       enabled: true
     pspEnable: false
-    csi:
-      kubeletDirPath: /var/lib/kubelet
-      enableCSIHostNetwork: true
-      pluginTolerations:
-        - effect: "NoExecute"
-          operator: "Exists"
-        - effect: "NoSchedule"
-          operator: "Exists"
     monitoring:
       enabled: true
     resources:
       requests:
-        cpu: 100m
-        memory: 204Mi
+        cpu: 10m
+        memory: 128Mi
       limits:
-        memory: 453Mi
+        memory: 256Mi
