--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -6,16 +6,14 @@ metadata:
   namespace: rook-ceph
 spec:
   interval: 15m
-  releaseName: rook-ceph-cluster
   chart:
     spec:
       chart: rook-ceph-cluster
-      version: v1.10.9
+      version: v1.10.8
       sourceRef:
         kind: HelmRepository
         name: rook-ceph
         namespace: flux-system
-      interval: 15m
   maxHistory: 3
   install:
     createNamespace: true
@@ -28,80 +26,41 @@ spec:
   uninstall:
     keepHistory: false
   values:
-    toolbox:
-      enabled: false
     monitoring:
       enabled: true
-      createPrometheusRules: false
+      createPrometheusRules: true
+    ingress:
+      dashboard:
+        ingressClassName: traefik
+        annotations:
+          hajimari.io/appName: "Rook"
+          hajimari.io/icon: mdi:chess-rook
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          external-dns.home.arpa/enabled: "true"
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
+        host:
+          name: &host rook.${SECRET_DOMAIN}
+          path: /
+        tls:
+          - hosts:
+              - *host
     configOverride: |
       [global]
       bdev_enable_discard = true
       bdev_async_discard = true
-      bluefs_buffered_io = false
-
     cephClusterSpec:
-      cephVersion:
-        # image: quay.io/ceph/ceph:v16.2.7
-        image: quay.io/ceph/ceph:v17.2.5
-
-      resources:
-        mgr:
-          requests:
-            cpu: "125m"
-            memory: "549M"
-          limits:
-            cpu: 2
-            memory: "1485M"
-        mon:
-          requests:
-            cpu: "49m"
-            memory: "1165M"
-          limits:
-            memory: "3390M"
-        osd:
-          requests:
-            cpu: "511m"
-            memory: "4067M"
-          limits:
-            memory: "4067M"
-        prepareosd:
-          requests:
-            cpu: "250m"
-            memory: "50Mi"
-          limits:
-            memory: "200Mi"
-        mgr-sidecar:
-          requests:
-            cpu: "49m"
-            memory: "79M"
-          limits:
-            memory: "227M"
-        crashcollector:
-          requests:
-            cpu: "15m"
-            memory: "64M"
-          limits:
-            memory: "64M"
-        logcollector:
-          requests:
-            cpu: "100m"
-            memory: "100M"
-          limits:
-            memory: "1G"
-        cleanup:
-          requests:
-            cpu: "250m"
-            memory: "100M"
-          limits:
-            memory: "1G"
-
+      network:
+        provider: host
+        connections:
+          compression:
+            enabled: false
       crashCollector:
         disable: false
-
       dashboard:
         enabled: true
         urlPrefix: /
-
+        ssl: false
       storage:
         useAllNodes: false
         useAllDevices: false
@@ -120,22 +79,6 @@ spec:
           - name: "k3s-4"
             devices:
               - name: "nvme0n1"
-    ingress:
-      dashboard:
-        ingressClassName: "traefik"
-        annotations:
-          cert-manager.io/cluster-issuer: "letsencrypt-production"
-          external-dns.home.arpa/enabled: "true"
-          traefik.ingress.kubernetes.io/router.entrypoints: websecure
-          traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
-        host:
-          name: "rook.${SECRET_DOMAIN}"
-          path: "/"
-        pathType: Prefix
-        tls:
-          - hosts:
-              - "rook.${SECRET_DOMAIN}"
-            secretName: "rook.${SECRET_DOMAIN}"
     cephBlockPools:
       - name: ceph-blockpool
         spec:
@@ -158,27 +101,33 @@ spec:
             csi.storage.k8s.io/node-stage-secret-name: rook-csi-rbd-node
             csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
             csi.storage.k8s.io/fstype: ext4
-
     cephFileSystems:
       - name: ceph-filesystem
         spec:
           metadataPool:
             replicated:
-              size: 4
+              size: 3
           dataPools:
             - failureDomain: host
               replicated:
-                size: 4
+                size: 3
+              name: data0
           metadataServer:
             activeCount: 1
             activeStandby: true
+            resources:
+              requests:
+                cpu: 1000m
+                memory: 4Gi
+              limits:
+                memory: 4Gi
         storageClass:
           enabled: true
           isDefault: false
           name: ceph-filesystem
+          pool: data0
           reclaimPolicy: Delete
           allowVolumeExpansion: true
-          mountOptions: []
           parameters:
             csi.storage.k8s.io/provisioner-secret-name: rook-csi-cephfs-provisioner
             csi.storage.k8s.io/provisioner-secret-namespace: rook-ceph
@@ -187,5 +136,34 @@ spec:
             csi.storage.k8s.io/node-stage-secret-name: rook-csi-cephfs-node
             csi.storage.k8s.io/node-stage-secret-namespace: rook-ceph
             csi.storage.k8s.io/fstype: ext4
-
     cephObjectStores: []
+      # - name: ceph-objectstore
+      #   spec:
+      #     metadataPool:
+      #       failureDomain: host
+      #       replicated:
+      #         size: 3
+      #     dataPool:
+      #       failureDomain: host
+      #       erasureCoded:
+      #         dataChunks: 2
+      #         codingChunks: 1
+      #     preservePoolsOnDelete: true
+      #     gateway:
+      #       port: 80
+      #       resources:
+      #         requests:
+      #           cpu: 1000m
+      #           memory: 1Gi
+      #         limits:
+      #           memory: 2Gi
+      #       instances: 1
+      #     healthCheck:
+      #       bucket:
+      #         interval: 60s
+      #   storageClass:
+      #     enabled: true
+      #     name: ceph-bucket
+      #     reclaimPolicy: Delete
+      #     parameters:
+      #       region: us-east-1
