--- a/kubernetes/apps/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/ks.yaml
@@ -2,67 +2,45 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: rook-ceph
+  name: cluster-apps-rook-ceph
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
   path: ./kubernetes/apps/rook-ceph/rook-ceph/app
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: rook-ceph
+      name: rook-ceph-operator
       namespace: rook-ceph
-  prune: true
-  wait: true
   interval: 30m
-  retryInterval: 2m
-  timeout: 1m
+  retryInterval: 1m
+  timeout: 3m
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: rook-ceph-cluster
+  name: cluster-apps-rook-ceph-cluster
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
-  path: ./kubernetes/apps/rook-ceph/rook-ceph/app/cluster
+  dependsOn:
+    - name: cluster-apps-rook-ceph
+  path: ./kubernetes/apps/rook-ceph/rook-ceph/cluster
+  prune: true
   sourceRef:
     kind: GitRepository
     name: home-kubernetes
-  dependsOn:
-    - name: rook-ceph
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
       name: rook-ceph-cluster
       namespace: rook-ceph
-  prune: true
-  wait: true
   interval: 30m
-  retryInterval: 2m
-  timeout: 1m
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-# kind: Kustomization
-# metadata:
-#   name: rook-ceph-addons
-#   namespace: flux-system
-#   labels:
-#     substitution.flux.home.arpa/enabled: "true"
-# spec:
-#   path: ./kubernetes/apps/kube-system/rook-ceph/app/add-ons
-#   sourceRef:
-#     kind: GitRepository
-#     name: home-kubernetes
-#   dependsOn:
-#     - name: rook-ceph-operator
-#   prune: true
-#   wait: true
-#   interval: 30m
-#   retryInterval: 2m
-#   timeout: 1m
+  retryInterval: 1m
+  timeout: 5m
