--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   - ./namespace.yaml
   - ./kubernetes-dashboard/ks.yaml
   - ./goldilocks/ks.yaml
+  - ./vpa/ks.yaml
   #- ./kube-prometheus-stack/ks.yaml
   #- ./grafana/ks.yaml
