--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -4,60 +4,94 @@ kind: HelmRelease
 metadata:
   name: kube-prometheus-stack
   namespace: monitoring
+
 spec:
-  interval: 15m
+  interval: 5m
   chart:
     spec:
       chart: kube-prometheus-stack
-      version: 43.2.1
+      version: 41.9.1
       sourceRef:
         kind: HelmRepository
         name: prometheus-community
         namespace: flux-system
-      interval: 15m
-  maxHistory: 3
+      interval: 5m
   install:
     createNamespace: true
-    crds: CreateReplace
     remediation:
       retries: 3
   upgrade:
-    crds: CreateReplace
     remediation:
       retries: 3
   values:
-    fullnameOverride: prometheus
-    defaultRules:
-      create: true
-      rules:
-        alertmanager: true
-        etcd: true
-        configReloaders: true
-        general: true
-        k8s: true
-        kubeApiserver: true
-        kubeApiserverAvailability: true
-        kubeApiserverSlos: true
-        kubelet: true
-        kubeProxy: false
-        kubePrometheusGeneral: true
-        kubePrometheusNodeRecording: true
-        kubernetesApps: true
-        kubernetesResources: true
-        kubernetesStorage: true
-        kubernetesSystem: true
-        kubeScheduler: false
-        kubeStateMetrics: true
-        network: true
-        node: true
-        nodeExporterAlerting: true
-        nodeExporterRecording: true
-        prometheus: true
-        prometheusOperator: true
-    kubeControllerManager:
+    alertmanager:
+      config:
+        global:
+          resolve_timeout: 5m
+        route:
+          group_by: ["alertname", "job"]
+          group_wait: 30s
+          group_interval: 5m
+          repeat_interval: 6h
+          receiver: "alerts"
+          routes:
+            - receiver: "null"
+              matchers:
+                - alertname =~ "InfoInhibitor|Watchdog"
+        receivers:
+          - name: "null"
+          - name: "alerts"
+        inhibit_rules:
+          - source_matchers:
+              - severity = "critical"
+            target_matchers:
+              - severity = "warning"
+            equal: ["alertname", "namespace"]
+      ingress:
+        enabled: true
+        pathType: Prefix
+        ingressClassName: "traefik"
+        annotations:
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        hosts:
+          - &alertHost "alert-manager.${SECRET_DOMAIN}"
+        tls:
+          - hosts:
+              - *alertHost
+            secretName: alert-manager-tls
+      alertmanagerSpec:
+        replicas: 3
+        podAntiAffinity: hard
+        storage:
+          volumeClaimTemplate:
+            spec:
+              storageClassName: "local-path"
+              resources:
+                requests:
+                  storage: 250Mi
+    kube-state-metrics:
+      fullnameOverride: kube-state-metrics
+    prometheus-node-exporter:
+      fullnameOverride: node-exporter
+      prometheus:
+        monitor:
+          enabled: false
+          relabelings:
+            - action: replace
+              regex: (.*)
+              replacement: $1
+              sourceLabels:
+                - __meta_kubernetes_pod_node_name
+              targetLabel: kubernetes_node
+    grafana:
       enabled: false
-    kubeEtcd:
-      enabled: false
+      forceDeployDashboards: true
+      sidecar:
+        dashboards:
+          multicluster:
+            etcd:
+              enabled: false
     kubelet:
       enabled: true
       serviceMonitor:
@@ -66,113 +100,46 @@ spec:
             sourceLabels:
               - node
             targetLabel: instance
-    kubeApiServer:
-      enabled: true
-    kubeProxy:
-      enabled: false
-    kubeScheduler:
-      enabled: false
-    kubeStateMetrics:
-      enabled: true
-    kube-state-metrics:
-      fullnameOverride: kube-state-metrics
-      metricLabelsAllowlist:
-        - persistentvolumeclaims=[*]
-      prometheus:
-        monitor:
-          enabled: true
-          relabelings:
-            - action: replace
-              regex: (.*)
-              replacement: $1
-              sourceLabels:
-                - __meta_kubernetes_pod_node_name
-              targetLabel: kubernetes_node
-    alertmanager:
-      ingress:
-        enabled: true
-        annotations:
-          kubernetes.io/ingress.class: traefik
-          cert-manager.io/cluster-issuer: "letsencrypt-production"
-          hajimari.io/enable: "true"
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
-        hosts:
-          - "alerts.${SECRET_DOMAIN}"
-        path: /
-        pathType: Prefix
-      config:
-        global:
-          resolve_timeout: 5m
-        inhibit_rules:
-          - source_match:
-              severity: "critical"
-            target_match:
-              severity: "warning"
-            equal: ["alertname", "namespace"]
-        templates:
-          - /etc/alertmanager/config/*.tmpl
-      alertmanagerSpec:
-        storage:
-          volumeClaimTemplate:
-            spec:
-              storageClassName: local-path
-              resources:
-                requests:
-                  storage: 1Gi
-    prometheus-node-exporter:
-      fullnameOverride: node-exporter
-      prometheus:
-        monitor:
-          enabled: true
-          relabelings:
-            - action: replace
-              regex: (.*)
-              replacement: $1
-              sourceLabels:
-                - __meta_kubernetes_pod_node_name
-              targetLabel: kubernetes_node
-    prometheusOperator:
-      prometheusConfigReloader:
-        resources:
-          requests:
-            cpu: 100m
-            memory: 50Mi
-          limits:
-            cpu: 200m
-            memory: 100Mi
     prometheus:
       ingress:
         enabled: true
-        annotations:
-          kubernetes.io/ingress.class: traefik
-          cert-manager.io/cluster-issuer: "letsencrypt-production"
-          hajimari.io/enable: "true"
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-authentik@kubernetescrd
-        hosts:
-          - "prom.${SECRET_DOMAIN}"
-        path: /
         pathType: Prefix
+        ingressClassName: "traefik"
+        annotations:
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        hosts:
+          - &prometheusHost "prometheus.${SECRET_DOMAIN}"
+        tls:
+          - hosts:
+              - *prometheusHost
+            secretName: prometheus-tls
       thanosService:
         enabled: true
       thanosServiceMonitor:
         enabled: true
+      thanosIngress:
+        enabled: true
+        pathType: Prefix
+        ingressClassName: "traefik"
+        annotations:
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
+          external-dns/is-public: "true"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        hosts:
+          - &thanosHost "thanos-sidecar.${SECRET_DOMAIN}"
+        tls:
+          - hosts:
+              - *thanosHost
+            secretName: thanos-sidecar-tls
       prometheusSpec:
-        replicas: 1
-        podAntiAffinity: hard
-        retentionSize: "6GB"
-        replicaExternalLabelName: "replica"
-        ruleSelector: {}
-        ruleNamespaceSelector: {}
+        replicas: 3
+        replicaExternalLabelName: "__replica__"
         ruleSelectorNilUsesHelmValues: false
-        serviceMonitorSelector: {}
-        serviceMonitorNamespaceSelector: {}
         serviceMonitorSelectorNilUsesHelmValues: false
-        podMonitorSelector: {}
-        podMonitorNamespaceSelector: {}
         podMonitorSelectorNilUsesHelmValues: false
-        retention: 2d
+        probeSelectorNilUsesHelmValues: false
+        retention: 6h
         enableAdminAPI: true
         walCompression: true
         storageSpec:
@@ -182,168 +149,10 @@ spec:
               resources:
                 requests:
                   storage: 2Gi
-        containers:
-          - name: prometheus
-            image: docker.io/prom/prometheus:v2.12.0
-            volumeMounts:
-              - mountPath: "/prometheus/data"
-                name: prometheus-data
-        initContainers:
-          - name: prometheus-data-permission-fix
-            image: busybox
-            command: ["/bin/chmod", "-R", "777", "/data"]
-            volumeMounts:
-              - name: prometheus-data
-                mountPath: /data
-        volumes:
-          - name: prometheus-data
-            persistentVolumeClaim:
-              claimName: pvc-prometheus
-
-
         thanos:
-          image: quay.io/thanos/thanos:v0.29.0
           # renovate: datasource=docker depName=quay.io/thanos/thanos
-          version: v0.27.0
+          image: "quay.io/thanos/thanos:v0.29.0"
+          version: "v0.28.1"
           objectStorageConfig:
             name: thanos-objstore-secret
             key: objstore.yml
-
-    grafana:
-      enabled: false
-      forceDeployDashboards: true
-      sidecar:
-        dashboards:
-          annotations:
-            grafana_folder: Prometheus
-
-# ---
-# apiVersion: helm.toolkit.fluxcd.io/v2beta1
-# kind: HelmRelease
-# metadata:
-#   name: kube-prometheus-stack
-#   namespace: monitoring
-# spec:
-#   interval: 15m
-#   chart:
-#     spec:
-#       chart: kube-prometheus-stack
-#       version: 43.2.1
-#       sourceRef:
-#         kind: HelmRepository
-#         name: prometheus-community
-#         namespace: flux-system
-#   maxHistory: 3
-#   install:
-#     createNamespace: true
-#     crds: CreateReplace
-#     remediation:
-#       retries: 3
-#   upgrade:
-#     cleanupOnFail: true
-#     crds: CreateReplace
-#     remediation:
-#       retries: 3
-#   uninstall:
-#     keepHistory: false
-#   values:
-#     cleanPrometheusOperatorObjectNames: true
-#     alertmanager:
-#       enabled: true
-#       config:
-#         global:
-#           resolve_timeout: 5m
-
-#       ingress:
-#         enabled: true
-#         pathType: Prefix
-#         ingressClassName: traefik
-#         annotations:
-#           hajimari.io/appName: "Alert Manager"
-#           hajimari.io/icon: mdi:alert-decagram-outline
-#           cert-manager.io/cluster-issuer: "letsencrypt-production"
-#           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-#         hosts:
-#           - "alerts.${SECRET_DOMAIN}"
-#         tls:
-#           - hosts:
-#               - "alerts.${SECRET_DOMAIN}"
-#             secretName: "alerts.${SECRET_DOMAIN}"
-#       alertmanagerSpec:
-#         replicas: 1
-#         podAntiAffinity: hard
-#         storage:
-#           volumeClaimTemplate:
-#             spec:
-#               storageClassName: local-path
-#               resources:
-#                 requests:
-#                   storage: 1Gi
-#     kube-state-metrics:
-#       metricLabelsAllowlist: ["persistentvolumeclaims=[*]"]
-#       prometheus:
-#         monitor:
-#           enabled: true
-#           relabelings:
-#             - action: replace
-#               regex: (.*)
-#               replacement: $1
-#               sourceLabels: ["__meta_kubernetes_pod_node_name"]
-#               targetLabel: kubernetes_node
-#     grafana:
-#       enabled: false
-#       forceDeployDashboards: true
-#       sidecar:
-#         dashboards:
-#           enabled: true
-#           label: grafana_dashboard
-#           labelValue: "1"
-
-#     prometheus:
-#       ingress:
-#         enabled: true
-#         ingressClassName: traefik
-#         annotations:
-#           hajimari.io/appName: Prometheus
-#           hajimari.io/icon: simple-icons:prometheus
-#           cert-manager.io/cluster-issuer: "letsencrypt-production"
-#         hosts:
-#           - "prom.${SECRET_DOMAIN}"
-#         path: /
-#         pathType: Prefix
-#         tls:
-#           - hosts:
-#               - "prom.${SECRET_DOMAIN}"
-#             secretName: "prom.${SECRET_DOMAIN}"
-
-
-#       thanosService:
-#         enabled: true
-#       thanosServiceMonitor:
-#         enabled: true
-#       prometheusSpec:
-#         replicas: 1
-#         replicaExternalLabelName: __replica__
-#         externalLabels:
-#           cluster: home-kubernetes
-#         ruleSelectorNilUsesHelmValues: false
-#         serviceMonitorSelectorNilUsesHelmValues: false
-#         podMonitorSelectorNilUsesHelmValues: false
-#         probeSelectorNilUsesHelmValues: false
-#         retention: 2d
-#         retentionSize: 6GB
-#         enableAdminAPI: true
-#         walCompression: true
-#         storageSpec:
-#           volumeClaimTemplate:
-#             spec:
-#               storageClassName: local-path
-#               resources:
-#                 requests:
-#                   storage: Gi
-#         resources:
-#           requests:
-#             cpu: 10m
-#             memory: 2000Mi
-#           limits:
-#             memory: 4000Mi
