--- a/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/app/helmrelease.yaml
@@ -24,6 +24,13 @@ spec:
     remediation:
       retries: 3
   values:
+  ## Security context to be added to server pods
+  ##
+  securityContext:
+    runAsUser: 0
+    runAsNonRoot: false
+    runAsGroup: 0
+    fsGroup: 0
     alertmanager:
       config:
         global:
